Add HTML for Resume Navigation and Header Top-Section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>My Resume</title>
+  <title>Liz Curtis &verbar; Web Developer</title>
 
   <link rel="stylesheet" href="css/index.css">
 
@@ -14,6 +14,19 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <header>
+    <div class="nav-bar">
+      <nav>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Contact</a></li>
+      </nav>
+    </div>
+    <div class="top-section">
+      <img src="img/adult-connection-education-1181678.jpg" alt="Woman with Orange Headphones Typing on Macbook">
+    </div>
+  </header>
+  <h1>Liz Curtis</h1>
 </body>
 </html>
