Add HTML for Middle and Bottom sections and Footer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 </head>
 
 <body>
+
+  <!--HEADER SECTION-->
+
   <header>
+
+    <!--NAVIGATION-->
+
     <div class="nav-bar">
       <nav>
         <li><a href="#">Home</a></li>
@@ -23,10 +29,73 @@
         <li><a href="#">Contact</a></li>
       </nav>
     </div>
+    
+    <!--TOP SECTION OF HEADER-->
     <div class="top-section">
       <img src="img/adult-connection-education-1181678.jpg" alt="Woman with Orange Headphones Typing on Macbook">
     </div>
+    <h1>Liz Curtis - Web Developer</h1>
+    <h2>Let's build something.</h2>
+    <p>I like fun projects that keep accessiblity and user experience at the forefront. Contact me to set up a meeting.</p>
+    <button class="button">Let's Team Up</button>
   </header>
-  <h1>Liz Curtis</h1>
+
+  <!--MIDDLE SECTION OF PAGE-->
+
+  <section class="middle-section">
+    <div class="about">
+      <h3>About Me</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id voluptas dolore, incidunt et excepturi provident? Hic voluptatibus earum id nam, repellat aspernatur ab quisquam harum voluptatem accusantium odio, quo sit?</p>
+    </div>
+    <div class="skills">
+      <h3>My Skills</h3>
+      <table class="skills-table">
+        <tr><td>HTML5</td></tr>
+        <tr><td>CSS3</td></tr>
+        <tr><td>Flexbox</td></tr>
+        <tr><td>Grid</td></tr>
+        <tr><td>JavaScript</td></tr>
+      </table>
+    </div>
+  </section>
+
+  <!--BOTTOM SECTION-->
+
+  <section class="bottom-section">
+    <h3>Work History</h3>
+    <table class="work-table">
+      <tr>
+        <th>Years</th>
+        <th>Company</th>
+        <th>Title</th>
+        <th>Tech Used</th>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>Apple</td>
+        <td>Software Engineer</td>
+        <td>Swift</td>
+      </tr>
+      <tr>
+          <td>2</td>
+          <td>Microsoft</td>
+          <td>Computer Scientist</td>
+          <td>.Net</td>
+      </tr>
+      <tr>
+          <td>3</td>
+          <td>Amazon</td>
+          <td>Dev Ops</td>
+          <td>AWS</td>
+      </tr>
+    </table>
+  </section>
+
+  <!--FOOTER SECTION-->
+
+  <footer>
+    <p class="copyright">&copy; Liz Curtis 2019</p>
+  </footer>
+  
 </body>
 </html>
