Add CSS and LESS for Navigation and Header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Liz Curtis &verbar; Web Developer</title>
 
   <link rel="stylesheet" href="css/index.css">
-
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300|Oxygen|Roboto&display=swap" rel="stylesheet">
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
@@ -30,14 +30,16 @@
       </nav>
     </div>
     
-    <!--TOP SECTION OF HEADER-->
+    <!--TOP SECTION-->
     <div class="top-section">
       <img src="img/adult-connection-education-1181678.jpg" alt="Woman with Orange Headphones Typing on Macbook">
+      <div class="top-intro">
+        <h1>Liz Curtis<br>// Web Dev //</h1>
+        <h2>Let's build something.</h2><br><br>
+        <p>I like fun projects that keep accessiblity and user experience at the forefront. Contact me to set up a meeting.</p><br><br>
+        <button class="button">Let's Team Up</button>
+      </div>
     </div>
-    <h1>Liz Curtis - Web Developer</h1>
-    <h2>Let's build something.</h2>
-    <p>I like fun projects that keep accessiblity and user experience at the forefront. Contact me to set up a meeting.</p>
-    <button class="button">Let's Team Up</button>
   </header>
 
   <!--MIDDLE SECTION OF PAGE-->
