Add CSS and LESS for Middle Section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
   </header>
 
-  <!--MIDDLE SECTION OF PAGE-->
+  <!--MIDDLE SECTION-->
 
   <section class="middle-section">
     <div class="about">
