--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Liz Curtis &verbar; Web Developer</title>
 
   <link rel="stylesheet" href="css/index.css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300|Oxygen|Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Open+Sans+Condensed:300|Oxygen|Quicksand|Roboto|Source+Sans+Pro&display=swap" rel="stylesheet">
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
