Add CSS and LESS for Middle Section including mixin for border

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="top-section">
       <img src="img/adult-connection-education-1181678.jpg" alt="Woman with Orange Headphones Typing on Macbook">
       <div class="top-intro">
-        <h1>Liz Curtis<br>// Web Dev //</h1>
+        <h1>Liz Curtis<br>// Web Dev //</h1><br>
         <h2>Let's build something.</h2><br><br>
         <p>I like fun projects that keep accessiblity and user experience at the forefront. Contact me to set up a meeting.</p><br><br>
         <button class="button">Let's Team Up</button>
@@ -47,7 +47,7 @@
   <section class="middle-section">
     <div class="about">
       <h3>About Me</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id voluptas dolore, incidunt et excepturi provident? Hic voluptatibus earum id nam, repellat aspernatur ab quisquam harum voluptatem accusantium odio, quo sit?</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id voluptas dolore, incidunt et excepturi provident? Hic voluptatibus earum id nam, repellat aspernatur ab quisquam harum voluptatem accusantium odio, quo sit?<br><br>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum veritatis laboriosam iste officiis fuga rem placeat maxime id, quisquam excepturi aut. Animi iste dolorem accusamus, corrupti placeat quis adipisci eius.</p>
     </div>
     <div class="skills">
       <h3>My Skills</h3>
