Update CSS and LESS for Skills table with background color teal and <hr>

--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
     </div>
     <div class="skills">
       <h3>My Skills</h3>
+      <hr class="underline">
       <table class="skills-table">
-        <tr><td>HTML5</td></tr>
-        <tr><td>CSS3</td></tr>
-        <tr><td>Flexbox</td></tr>
-        <tr><td>Grid</td></tr>
-        <tr><td>JavaScript</td></tr>
+        <tr><td>//   HTML5</td></tr>
+        <tr><td>//   CSS3</td></tr>
+        <tr><td>//   Flexbox</td></tr>
+        <tr><td>//   Grid</td></tr>
+        <tr><td>//   JavaScript</td></tr>
       </table>
     </div>
   </section>
